force-app/main/default/objects/Complaint_Resolution__c/Complaint_Resolution__c.object-meta.xml
<CustomObject>
    <label>Complaint Resolution</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Complaint Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Resolutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>