force-app/main/default/objects/Complaint_Resolution__c/fields/Awareness_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Trigger__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Awareness Trigger Field for Scam Reimbursement</description>
    <label>Awareness Trigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Scam_Reimbursement_Trigger__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal detection</fullName>
            </value>
            <value>
                <fullName>Assisted Red Flags</fullName>
            </value>
            <value>
                <fullName>Payment Inconsistencies</fullName>
            </value>
            <value>
                <fullName>Quarantine Release</fullName>
            </value>
            <value>
                <fullName>Delayed Reporting</fullName>
            </value>
            <value>
                <fullName>Scam History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>