force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Complaint__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Parent Complaint Record</description>
    <label>Complaint</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaint Resolutions</relationshipLabel>
    <relationshipName>Complaint_Resolutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>