force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Complaint_Remedy__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Remedy__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Explaining the actions that were required to remedy the complaint including any financial component.</description>
    <label>Complaint Remedy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Financial Remedy</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Credit approved remedy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non-financial remedy</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Referred to other financial firm or manufacturer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>