force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Complaint_Remedy_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Remedy_Offered__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>High level categorisation of complaint remedy offered to the customer - values are the same as existing &apos;Complaint Remedy&apos; fields</description>
    <label>Complaint Remedy Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Financial remedy</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Credit approved financial remedy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non-financial remedy</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Referred to other financial firm or manufacturer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>