force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_customer_accept_resolution_offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_customer_accept_resolution_offered__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer Accept Resolution offered?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Accept the Resolution offered?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>