force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Description_of_Outcome_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Description_of_Outcome_Offered__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To Show Description of Outcome offered to customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Outcome Offered</label>
    <type>TextArea</type>
</CustomField>