force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Duration_of_Remedy__c.field-meta.xml
<CustomField>
    <fullName>IDR_Duration_of_Remedy__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Duration of Remedy</description>
    <inlineHelpText>Maximum of 3 digits</inlineHelpText>
    <label>Duration of Remedy (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>