force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Duration_of_Remedy_months_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Duration_of_Remedy_months_Offered__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To show Duration of Remedy offered to customer</description>
    <label>Duration of Remedy (months) Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>