force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Financial_Compensation__c.field-meta.xml
<CustomField>
    <fullName>IDR_Financial_Compensation__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>The dollar amount of the compensation paid as a result of the complaint</description>
    <inlineHelpText>Refers to the actual amount that was paid to the customer or net loss incurred by ANZ. Ensure the exact dollar amount is entered. Evidence of any approvals obtained can be uploaded in the ‘files’ tab of the complaint record</inlineHelpText>
    <label>Payment Amount Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>