force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Financial_Remedy_Points__c.field-meta.xml
<CustomField>
    <fullName>IDR_Financial_Remedy_Points__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Reward points</description>
    <label>Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>