force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Other_Remedy_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Other_Remedy_Offered__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Other Remedy offered to customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Remedy Offered</label>
    <type>TextArea</type>
</CustomField>