force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Other_Remedy_Provided__c.field-meta.xml
<CustomField>
    <fullName>IDR_Other_Remedy_Provided__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>high level description of the remedy provided</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Remedy</label>
    <type>TextArea</type>
</CustomField>