force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Payment_Amount_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Payment_Amount_Offered__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Financial/ monetary amount provided if applicable.</description>
    <label>Payment Amount Offered</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>