force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Provided_details_to_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>IDR_Provided_details_to_Manufacturer__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>The details of this complaint have been provided to the product manufacturer</description>
    <label>Provided details to Product Manufacturer</label>
    <type>Checkbox</type>
</CustomField>