force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Rewards_Points_Offered__c.field-meta.xml
<CustomField>
    <fullName>IDR_Rewards_Points_Offered__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Total number of rewards points provided as part of the resolution. CMOS to convert to monetary equivalent</description>
    <label>Rewards Points Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>