force-app/main/default/objects/Complaint_Resolution__c/fields/IDR_Was_the_offer_enhanced_and_accepted__c.field-meta.xml
<CustomField>
    <fullName>IDR_Was_the_offer_enhanced_and_accepted__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Yes/No to the Question Offer Enhanced  and accepted by the Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Was the offer enhanced and accepted?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>