force-app/main/default/objects/Complaint_Resolution__c/fields/Non_Financial_Loss_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Non_Financial_Loss_Trigger__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Options for Non Financial Loss</description>
    <label>Non-Financial Loss Trigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inform Customer</fullName>
            </value>
            <value>
                <fullName>Customer Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>