force-app/main/default/objects/Complaint_Resolution__c/fields/Offered_details_to_Product_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Offered_details_to_Product_Manufacturer__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Capture response for Offered details to Product Manufacturer</description>
    <label>Offered details to Product Manufacturer</label>
    <type>Checkbox</type>
</CustomField>