force-app/main/default/objects/Complaint_Resolution__c/fields/Scam_Reimbursement_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Scam_Reimbursement_Trigger__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Scam Reimbursement Options</description>
    <label>Scam Reimbursement Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ePayments Code</fullName>
            </value>
            <value>
                <fullName>SRF Awareness Trigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>