force-app/main/default/objects/Complaint_Resolution__c/validationRules/IDR_Mandate_Product_Manufacturer.validationRule-meta.xml
<ValidationRule>
    <fullName>IDR_Mandate_Product_Manufacturer</fullName>
    <active>true</active>
    <description>If complaint remedy is Product Manufacturer then a Product Manufacturer must be selected</description>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp; !ISNEW() &amp;&amp;
( IDR_Complaint__r.RecordType.DeveloperName  = &apos;Non_Customer_Complaint&apos; || IDR_Complaint__r.RecordType.DeveloperName = &apos;Customer_Complaint&apos;) &amp;&amp; 
( TEXT( IDR_Complaint__r.Status) = &apos;Closed&apos; || TEXT( IDR_Complaint__r.Status) = &apos;Provisionally Closed&apos;)&amp;&amp;
TEXT(IDR_Complaint_Remedy__c) = &apos;3&apos; &amp;&amp; (
NOT(IDR_Provided_details_to_Manufacturer__c)
)</errorConditionFormula>
    <errorMessage>Please select a Product Manufacturer and acknowledge that the complaint details have been provided</errorMessage>
</ValidationRule>