force-app/main/default/objects/Complaint_Resolution__c/validationRules/VR012_Restrict_0_in_payment_amount_field.validationRule-meta.xml
<ValidationRule>
    <fullName>VR012_Restrict_0_in_payment_amount_field</fullName>
    <active>true</active>
    <description>This is to restrict users from saving $0 in payment amount fields where the complaint remedy is &apos;credit approved remedy&apos; and the sub remedy is &apos;debt waiver&apos; or &apos;settle for less&apos;</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT( ISNEW() ),
OR( IDR_Complaint__r.RecordType.DeveloperName = &apos;Non_Customer_Complaint&apos; || IDR_Complaint__r.RecordType.DeveloperName = &apos;Customer_Complaint&apos;
),
OR(
AND(
ISPICKVAL( IDR_Complaint_Remedy__c , &apos;4&apos;),
OR(
ISPICKVAL( IDR_Complaint_Sub_Remedy__c , &apos;10&apos;),
ISPICKVAL( IDR_Complaint_Sub_Remedy__c , &apos;18&apos;)),
IDR_Financial_Compensation__c = 0
),
AND(
ISPICKVAL( IDR_Complaint_Remedy_Offered__c , &apos;4&apos;),
OR(
ISPICKVAL( IDR_Complaint_Sub_Remedy_Offered__c , &apos;10&apos;),
ISPICKVAL( IDR_Complaint_Sub_Remedy_Offered__c , &apos;18&apos;)),
IDR_Payment_Amount_Offered__c = 0
)
)
)</errorConditionFormula>
    <errorMessage>Financial compensation or non-financial remedy must be populated based on the selection in complaint remedy and the other field must be left blank.</errorMessage>
</ValidationRule>