force-app/main/default/objects/Complaint_Resolution__c/validationRules/VR04_Required_to_Close_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_Required_to_Close_Complaint</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT( ISNEW() ),
OR(
IDR_Complaint__r.RecordType.DeveloperName = &apos;Customer_Complaint&apos;,
IDR_Complaint__r.RecordType.DeveloperName = &apos;Non_Customer_Complaint&apos;
),

ISPICKVAL(IDR_Complaint__r.Status, &apos;Closed&apos;),
ISPICKVAL( IDR_Complaint_Remedy__c , &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>To close the case or to resolve the case, complaint remedy must be populated</errorMessage>
</ValidationRule>