force-app/main/default/objects/Complaint_Resolution__c/validationRules/VR06_Restrict_Level_IDR_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_Restrict_Level_IDR_Users</fullName>
    <active>true</active>
    <description>If user is of Level 2 or Level 3 restrict access to edit fields if the user is not the owner or manager of the record owner</description>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
!ISNEW() &amp;&amp;
($Permission.IDR_Level_2 || $Permission.IDR_Level_3)&amp;&amp;
(!($User.Id =  IDR_Complaint__r.OwnerId || IDR_Complaint__r.Is_Owner_s_Line_Manager_Me__c))</errorConditionFormula>
    <errorMessage>You are not authorized to make updates to this field.</errorMessage>
</ValidationRule>